--- a/templates/conventions/step2.html
+++ b/templates/conventions/step2.html
@@ -7,8 +7,10 @@
       {% csrf_token %}
       <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-12 fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-          <h2 class="fr-mb-3w">Etape 2 - Identité du signataire</h2>
-
+          <h2>Etape 2/{{ nb_steps }} - Identité du signataire</h2>
+          <p class="fr-mb-3w">
+            <span style="font-style: italic;">Vous editez actuellement la convention : {{convention}}</span>
+          </p>
 
           <div class="fr-input-group {% if form.nom.errors %}fr-select-group--error{% endif %}">
             <label class="fr-label" for="{{form.nom.id_for_label}}">
@@ -199,8 +201,8 @@
         </div>
       </div>
       <div class="fr-col-12 fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
-        {% include "common/button/precedent.html" with precedent='conventions:step1_update' convention_uuid=convention_uuid %}
-        {% include "common/button/suivant.html" with suivant='conventions:step2' convention_uuid=convention_uuid %}
+        {% include "common/button/precedent.html" with precedent='conventions:step1_update' convention_uuid=convention.uuid %}
+        {% include "common/button/suivant.html" with suivant='conventions:step2' convention_uuid=convention.uuid %}
       </div>
     </form>
   </div>
