add step 9 : conventions.comments

--- a/templates/conventions/step9.html
+++ b/templates/conventions/step9.html
@@ -3,18 +3,39 @@
 {% block content %}
 <div class="fr-container-fluid ds_banner">
   <div class="fr-container">
-    <div class="fr-grid-row fr-grid-row--gutters">
-      <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-        <h2 class="fr-mb-3w">Etape 9/{{ nb_steps }} - Ajouter des informations à l'attention du service instructeur</h2>
-        <p class="fr-mb-3w">
-          ...
-        </p>
+    <form method="post" action="">
+      {% csrf_token %}
+
+      <div class="fr-grid-row fr-grid-row--gutters">
+        <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
+          <h2 class="fr-mb-3w">Etape 9/{{ nb_steps }} - Ajouter des informations à l'attention du service instructeur</h2>
+
+
+          <div class="fr-input-group {% if form.comments.errors %}fr-select-group--error{% endif %}">
+            <label class="fr-label" for="{{form.comments.id_for_label}}">
+              Ajoutez vos commentaires à l'attention de l'instructeur
+            </label>
+            <textarea
+              class="fr-input {% if form.comments.errors %}fr-input--error{% endif %}"
+              aria-describedby="text-input-error-desc-error"
+              type="text" id="{{form.comments.id_for_label}}"
+              name="comments"
+              rows="10">{{ form.comments.value|default_if_none:'' }}</textarea>
+            {% for error in form.comments.errors %}
+            <p id="text-input-error-desc-error" class="fr-error-text">
+              {{ error }}
+            </p>
+            {% endfor %}
+          </div>
+
+
+        </div>
       </div>
-    </div>
-    <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
-      {% include "common/button/precedent.html" with precedent='conventions:step8' convention_uuid=convention_uuid %}
-      {% include "common/button/suivant.html" with suivant='conventions:stepfin' convention_uuid=convention_uuid %}
-    </div>
+      <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
+        {% include "common/button/precedent.html" with precedent='conventions:step8' convention_uuid=convention.uuid %}
+        {% include "common/button/suivant.html" with suivant='conventions:step9' convention_uuid=convention.uuid %}
+      </div>
+    </form>
   </div>
 </div>
 <hr class="fr-grid-row fr-col-xs-10 fr-col-7 fr-my-7w">
