--- a/templates/conventions/step3.html
+++ b/templates/conventions/step3.html
@@ -11,18 +11,6 @@
           <p class="fr-mb-3w">
             <span style="font-style: italic;">Vous editez actuellement la convention : {{convention}}</span>
           </p>
-  <!--
-            adresse
-            code_postal
-            ville
-            nb_logements
-            type_habitat
-            type_operation
-            anru
-            nb_logement_non_conventionne
-            nb_locaux_commerciaux
-            nb_bureaux
-  -->
 
 
           <div class="fr-input-group {% if form.adresse.errors %}fr-select-group--error{% endif %}">
@@ -126,25 +114,6 @@
                   </p>
                   {% endfor %}
                 </div>
-<!--
-                <div class="fr-checkbox-group {% if form.anru.errors %}fr-checkbox-group--error{% endif %}">
-                  <input
-                    {% if form.anru.errors %}aria-describedby="checkboxes-error-desc-error"{% endif %}
-                    type="checkbox"
-                    id="anru"
-                    name="anru">
-                  <label class="fr-label" for="anru"> ANRU
-                    <span class="fr-hint-text">Le programme bénéficie d'un financement ANRU : {{form.anru}}</span>
-                  </label>
-                  {% for error in form.anru.errors %}
-                  <p id="checkboxes-error-desc-error" class="fr-error-text">
-                    {{ error }}
-                  </p>
-                  {% endfor %}
-                </div>
-
--->
-
               </div>
             </div>
           </div>
@@ -159,9 +128,14 @@
                     Type d'habitat
                   </label>
                   <select class="fr-select {% if form.type_habitat.errors %}fr-select--error{% endif %}" id="type_habitat" name="type_habitat">
-                    <option value="" selected disabled hidden>Collectif ou individuel ?</option>
-                    <option value="1">Collectif</option>
-                    <option value="2">Individuel</option>
+                    <option value="" {% if not type_habitat.value %}selected{% endif %} disabled hidden>Collectif ou individuel ?</option>
+                    <option value="" >Non applicable</option>
+                    {% for type_habitat in types_habitat %}
+                    <option value="{{type_habitat.value}}"
+                      {% if type_habitat.value  == form.type_habitat.value %}selected{% endif %}>
+                      {{type_habitat.label}}
+                    </option>
+                    {% endfor %}
                   </select>
                   {% for error in form.type_habitat.errors %}
                   <p id="select-error-desc-error" class="fr-error-text">
@@ -177,9 +151,13 @@
                   </label>
                   <select class="fr-select {% if form.type_operation.errors %}fr-select--error{% endif %}" id="type_operation" name="type_operation">
                     <option value="" selected disabled hidden>Selectionner un type d'opération</option>
-                    <option value="1">Réhabilitation</option>
-                    <option value="2">Ancien</option>
-                    <option value="2">Neuf</option>
+                    <option value="" >Non applicable</option>
+                    {% for type_operation in types_operation %}
+                    <option value="{{type_operation.value}}"
+                      {% if type_operation.value  == form.type_operation.value %}selected{% endif %}>
+                      {{type_operation.label}}
+                    </option>
+                    {% endfor %}
                   </select>
                   {% for error in form.type_operation.errors %}
                   <p id="select-error-desc-error" class="fr-error-text">
