--- a/templates/conventions/step2.html
+++ b/templates/conventions/step2.html
@@ -8,13 +8,12 @@
       <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-12 fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
           <h2>Etape 2/{{ nb_steps }} - Identité du signataire</h2>
-          <p class="fr-mb-3w">
-            <span style="font-style: italic;">Vous editez actuellement la convention : {{convention}}</span>
-          </p>
+          {% include "common/convention_edit_info.html" with convention=convention %}
+          {% include "common/mandatory_fields_info.html" %}
 
           <div class="fr-input-group {% if form.nom.errors %}fr-select-group--error{% endif %}">
             <label class="fr-label" for="{{form.nom.id_for_label}}">
-              Nom du bailleur
+              Nom du bailleur {% include "common/mandatory_field.html" %}
             </label>
             <input
               class="fr-input {% if form.nom.errors %}fr-input--error{% endif %}"
@@ -35,7 +34,7 @@
               <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
                 <div class="fr-input-group {% if form.siret.errors %}fr-select-group--error{% endif %}">
                   <label class="fr-label" for="{{form.siret.id_for_label}}">
-                    SIRET ou SIREN
+                    SIRET ou SIREN {% include "common/mandatory_field.html" %}
                   </label>
                   <input
                     class="fr-input {% if form.siret.errors %}fr-input--error{% endif %}"
@@ -75,7 +74,7 @@
 
           <div class="fr-input-group {% if form.adresse.errors %}fr-select-group--error{% endif %}">
             <label class="fr-label" for="{{form.adresse.id_for_label}}">
-              Adresse
+              Adresse {% include "common/mandatory_field.html" %}
             </label>
             <input
               class="fr-input {% if form.adresse.errors %}fr-input--error{% endif %}"
@@ -96,7 +95,7 @@
               <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
                 <div class="fr-input-group {% if form.code_postal.errors %}fr-select-group--error{% endif %}">
                   <label class="fr-label" for="{{form.code_postal.id_for_label}}">
-                    Code postal
+                    Code postal {% include "common/mandatory_field.html" %}
                   </label>
                   <input
                     class="fr-input {% if form.code_postal.errors %}fr-input--error{% endif %}"
@@ -115,7 +114,7 @@
               <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
                 <div class="fr-input-group {% if form.ville.errors %}fr-select-group--error{% endif %}">
                   <label class="fr-label" for="{{form.ville.id_for_label}}">
-                    Ville
+                    Ville {% include "common/mandatory_field.html" %}
                   </label>
                   <input
                     class="fr-input {% if form.ville.errors %}fr-input--error{% endif %}"
@@ -136,7 +135,7 @@
 
           <div class="fr-input-group {% if form.dg_nom.errors %}fr-select-group--error{% endif %}">
             <label class="fr-label" for="{{form.dg_nom.id_for_label}}">
-              Nom du directeur générale
+              Nom du directeur générale {% include "common/mandatory_field.html" %}
             </label>
             <input
               class="fr-input {% if form.dg_nom.errors %}fr-input--error{% endif %}"
@@ -158,7 +157,7 @@
               <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
                 <div class="fr-input-group {% if form.dg_fonction.errors %}fr-select-group--error{% endif %}">
                   <label class="fr-label" for="{{form.dg_fonction.id_for_label}}">
-                    Fonction du directeur general
+                    Fonction du directeur general {% include "common/mandatory_field.html" %}
                   </label>
                   <input
                     class="fr-input {% if form.dg_fonction.errors %}fr-input--error{% endif %}"
@@ -177,7 +176,7 @@
               <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
                 <div class="fr-input-group {% if form.dg_date_deliberation.errors %}fr-select-group--error{% endif %}">
                   <label class="fr-label" for="{{form.dg_date_deliberation.id_for_label}}">
-                    Date de délibération
+                    Date de délibération {% include "common/mandatory_field.html" %}
                   </label>
                   <div class="fr-input-wrap fr-fi-calendar-line fr-mt-1w" >
                     <input
@@ -207,5 +206,4 @@
     </form>
   </div>
 </div>
-<hr class="fr-grid-row fr-col-xs-10 fr-col-7 fr-my-7w">
 {% endblock %}
