--- a/templates/conventions/step1.html
+++ b/templates/conventions/step1.html
@@ -8,10 +8,11 @@
       <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
           <h2 class="fr-mb-3w">Etape 1/{{ nb_steps }} - Saisi du programme</h2>
+          {% include "common/mandatory_fields_info.html" %}
           <p class="fr-mb-3w">
             <div class="fr-select-group {% if form.lot_uuid.errors %}fr-select-group--error{% endif %}">
               <label class="fr-label" for="{{form.lot_uuid.id_for_label}}">
-                Séléctionnez votre programme et son financement
+                Séléctionnez votre programme et son financement {% include "common/mandatory_field.html" %}
               </label>
               <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" id="lot_uuid" name="lot_uuid">
                 <option value="" selected disabled hidden>Selectionnez une option</option>
@@ -42,5 +43,4 @@
     </form>
   </div>
 </div>
-<hr class="fr-grid-row fr-col-xs-10 fr-col-7 fr-my-7w">
 {% endblock %}
