--- a/templates/conventions/step5.html
+++ b/templates/conventions/step5.html
@@ -35,24 +35,38 @@
 
           <hr class="fr-col-12 fr-my-3w">
 
-          <p>Pour éditer vos prêts, il vous suffit de télécharger le modèle ci-dessous, d'ajouter ou de modifier votre liste de prêts, puis de le téléverser à nouveau.</p>
-          <p>Attention, la liste des prêts téléversée écrase la liste courante.</p>
-          <button type="button" class="fr-btn" onclick="location.href='{% url 'conventions:convention_prets' convention_uuid=convention.uuid %}'">
-            <span class="fr-fi-file-download-line fr-mr-1w" aria-hidden="true"></span>Télécharger le modèle !
-          </button>
+          <p>Pour éditer vos prêts, il vous suffit de télécharger le modèle ci-dessous, d'ajouter ou de modifier votre liste de prêts, puis de le téléverser à nouveau.<br>
+          <span class="fr-fi-alert-line fr-mr-1w" aria-hidden="true">Attention, la liste des prêts téléversée écrase la liste courante.</p>
 
+          <div class="fr-grid-row fr-grid-row--gutters fr-ml-3w">
 
-          <button name="Upload" value=True class="fr-btn">
-            <span class="fr-fi-file-download-line fr-mr-1w" aria-hidden="true"></span>Téléverser le fichier de vos prêts
-          </button>
+            <button type="button" class="fr-btn" onclick="location.href='{% url 'conventions:convention_prets' convention_uuid=convention.uuid %}'">
+              <span class="fr-fi-file-download-line fr-mr-1w" aria-hidden="true"></span>Télécharger le modèle !
+            </button>
+          </div>
+          <div class="fr-my-3w">Puis</p>
+          <div class="fr-grid-row fr-grid-row--gutters fr-ml-3w">
+            <div>
+              <button name="Upload" value=True class="fr-btn">
+                <span class="fr-fi-file-download-line fr-mr-1w" aria-hidden="true"></span>Téléverser le fichier de vos prêts
+              </button>
+            </div>
+            <div class="fr-ml-3w">
+              <input
+                class="fr-input {% if upform.file.errors %}fr-input--error{% endif %}"
+                aria-describedby="text-input-error-desc-error"
+                type="file"
+                id="{{upform.file.id_for_label}}"
+                name="{{upform.file.html_name}}"
+                value="{{ upform.file.value|default_if_none:'' }}">
+              {% for error in upform.file.errors %}
+                <p id="text-input-error-desc-error" class="fr-error-text">
+                  {{ error }}
+                </p>
+              {% endfor %}
+            </div>
 
-          <input
-          class="fr-input {% if upform.file.errors %}fr-input--error{% endif %}"
-          aria-describedby="text-input-error-desc-error"
-          type="file"
-          id="{{upform.file.id_for_label}}"
-          name="{{upform.file.html_name}}"
-          value="{{ upform.file.value|default_if_none:'' }}">
+          </div>
 
           <hr class="fr-col-12 fr-my-3w">
 
@@ -124,6 +138,7 @@
                       class="fr-input {% if form_pret.montant.errors %}fr-input--error{% endif %}"
                       pattern="[0-9]*"
                       min=0
+                      step="0.01"
                       inputmode="numeric"
                       {% if form_pret.montant.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
                       type="number"
@@ -170,4 +185,16 @@
     </form>
   </div>
 </div>
+<!--
+<script>
+  document.addEventListener("DOMContentLoaded", function(event) {
+      var scrollpos = localStorage.getItem('scrollpos');
+      if (scrollpos) window.scrollTo(0, scrollpos);
+  });
+
+  window.onbeforeunload = function(e) {
+      localStorage.setItem('scrollpos', window.scrollY);
+  };
+</script>
+-->
 {% endblock %}
