--- a/templates/conventions/step5.html
+++ b/templates/conventions/step5.html
@@ -3,14 +3,16 @@
 {% block content %}
 <div class="fr-container-fluid ds_banner">
   <div class="fr-container">
-    <form method="post" action="">
+
+    <form method="post" action="" enctype="multipart/form-data">
       {% csrf_token %}
       <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
+  <!--
+          <h2 class="fr-mb-3w">Etape 6/{{ nb_steps }} - Détails des logements</h2>
+  -->
           <h2>Etape 5/{{ nb_steps }} - Financements</h2>
           {% include "common/convention_edit_info.html" with convention=convention %}
-          {% include "common/mandatory_fields_info.html" %}
-
 
           <div class="fr-input-group {% if form.date_fin_conventionnement.errors %}fr-select-group--error{% endif %}">
             <label class="fr-label" for="{{form.date_fin_conventionnement.id_for_label}}">
@@ -31,6 +33,148 @@
             {% endfor %}
           </div>
 
+          <hr class="fr-col-12 fr-my-3w">
+
+          <p>Pour éditer vos prêts, il vous suffit de télécharger le modèle ci-dessous, d'ajouter ou de modifier votre liste de prêts, puis de le téléverser à nouveau.<br>
+          <span class="fr-fi-alert-line fr-mr-1w" aria-hidden="true">Attention, la liste des prêts téléversée écrase la liste courante.</p>
+
+          <div class="fr-grid-row fr-grid-row--gutters fr-ml-3w">
+
+            <button type="button" class="fr-btn" onclick="location.href='{% url 'conventions:convention_prets' convention_uuid=convention.uuid %}'">
+              <span class="fr-fi-file-download-line fr-mr-1w" aria-hidden="true"></span>Télécharger le modèle !
+            </button>
+          </div>
+          <div class="fr-my-3w">Puis</p>
+          <div class="fr-grid-row fr-grid-row--gutters fr-ml-3w">
+            <div>
+              <button name="Upload" value=True class="fr-btn">
+                <span class="fr-fi-file-download-line fr-mr-1w" aria-hidden="true"></span>Téléverser le fichier de vos prêts
+              </button>
+            </div>
+            <div class="fr-ml-3w">
+              <input
+                class="fr-input {% if upform.file.errors %}fr-input--error{% endif %}"
+                aria-describedby="text-input-error-desc-error"
+                type="file"
+                id="{{upform.file.id_for_label}}"
+                name="{{upform.file.html_name}}"
+                value="{{ upform.file.value|default_if_none:'' }}">
+              {% for error in upform.file.errors %}
+                <p id="text-input-error-desc-error" class="fr-error-text">
+                  {{ error }}
+                </p>
+              {% endfor %}
+            </div>
+
+          </div>
+
+          <hr class="fr-col-12 fr-my-3w">
+
+          {{ formset.management_form }}
+          <div class="fr-table fr-table--bordered">
+            <table>
+                <caption>Liste des prêts associés à la convention</caption>
+
+                <thead>
+                <tr>
+                  <th scope="col">Numéro</th>
+                  <th scope="col">Date d'octroi</th>
+                  <th scope="col">Durée</th>
+                  <th scope="col">Montant</th>
+                  <th scope="col">Préteur</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for form_pret in formset %}
+                <tr>
+                  <td>
+                    <input
+                      class="fr-input {% if form_pret.numero.errors %}fr-input--error{% endif %}"
+                      aria-describedby="text-input-error-desc-error"
+                      type="text"
+                      id="{{form_pret.numero.id_for_label}}"
+                      name="{{form_pret.numero.html_name}}"
+                      value="{{ form_pret.numero.value|default_if_none:'' }}">
+                    {% for error in form_pret.numero.errors %}
+                    <p id="text-input-error-desc-error" class="fr-error-text">
+                      {{ error }}
+                    </p>
+                    {% endfor %}
+                  </td>
+                  <td>
+                    <div class="fr-input-wrap fr-fi-calendar-line fr-mt-1w" >
+                      <input
+                        class="fr-input {% if form_pret.date_octroi.errors %}fr-input--error{% endif %}"
+                        type="date"
+                        id="{{form_pret.date_octroi.id_for_label}}"
+                        name="{{form_pret.date_octroi.html_name}}"
+                        value="{{ form_pret.date_octroi.value }}">
+                    </div>
+                    {% for error in form_pret.date_octroi.errors %}
+                    <p id="text-input-error-desc-error" class="fr-error-text">
+                      {{ error }}
+                    </p>
+                    {% endfor %}
+                  </td>
+                  <td>
+                    <input
+                      class="fr-input {% if form_pret.duree.errors %}fr-input--error{% endif %}"
+                      pattern="[0-9]*"
+                      min=0
+                      inputmode="numeric"
+                      {% if form_pret.duree.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
+                      type="number"
+                      id="{{form_pret.duree.id_for_label}}"
+                      name="{{form_pret.duree.html_name}}"
+                      value="{{ form_pret.duree.value|default_if_none:'' }}">
+                    {% for error in form_pret.duree.errors %}
+                    <p id="text-input-error-desc-error" class="fr-error-text">
+                      {{ error }}
+                    </p>
+                    {% endfor %}
+                  </td>
+                  <td>
+                    <input
+                      class="fr-input {% if form_pret.montant.errors %}fr-input--error{% endif %}"
+                      pattern="[0-9]*"
+                      min=0
+                      step="0.01"
+                      inputmode="numeric"
+                      {% if form_pret.montant.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
+                      type="number"
+                      id="{{form_pret.montant.id_for_label}}"
+                      name="{{form_pret.montant.html_name}}"
+                      value="{{ form_pret.montant.value|default_if_none:'' }}">
+                    {% for error in form_pret.montant.errors %}
+                    <p id="text-input-error-desc-error" class="fr-error-text">
+                      {{ error }}
+                    </p>
+                    {% endfor %}
+                  </td>
+                  <td>
+                    <select
+                      class="fr-select {% if form_pret.preteur.errors %}fr-select--error{% endif %}"
+                      id="{{form_pret.preteur.id_for_label}}"
+                      name="{{form_pret.preteur.html_name}}">
+                      <option value="" {% if not preteur.value %}selected{% endif %} disabled hidden>Sélectionnez le prêteur</option>
+                      {% for preteur in preteurs %}
+                      <option value="{{preteur.value}}"
+                        {% if preteur.value  == form_pret.preteur.value %}selected{% endif %}>
+                        {{preteur.label}}
+                      </option>
+                      {% endfor %}
+                    </select>
+                    {% for error in form_pret.preteur.errors %}
+                    <p id="select-error-desc-error" class="fr-error-text">
+                      {{ error }}
+                    </p>
+                    {% endfor %}
+                  </td>
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+          </div>
 
         </div>
       </div>
@@ -41,5 +185,16 @@
     </form>
   </div>
 </div>
-<hr class="fr-grid-row fr-col-xs-10 fr-col-7 fr-my-7w">
+<!--
+<script>
+  document.addEventListener("DOMContentLoaded", function(event) {
+      var scrollpos = localStorage.getItem('scrollpos');
+      if (scrollpos) window.scrollTo(0, scrollpos);
+  });
+
+  window.onbeforeunload = function(e) {
+      localStorage.setItem('scrollpos', window.scrollY);
+  };
+</script>
+-->
 {% endblock %}
